lab-3/antlr/program/TerraformSubsetParser.py
# Generated from TerraformSubset.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class TerraformSubsetParser ( Parser ):

    grammarFileName = "TerraformSubset.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'provider'", "'{'", "'}'", "'resource'", 
                     "'variable'", "'output'", "'destroy'", "'='", "'.'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "BOOLEAN", "NUMBER", "STRING", 
                      "IDENTIFIER", "COMMENT", "WS" ]

    RULE_terraform = 0
    RULE_block = 1
    RULE_provider = 2
    RULE_resource = 3
    RULE_variable = 4
    RULE_output = 5
    RULE_destroy = 6
    RULE_body = 7
    RULE_keyValue = 8
    RULE_expr = 9
    RULE_reference = 10

    ruleNames =  [ "terraform", "block", "provider", "resource", "variable", 
                   "output", "destroy", "body", "keyValue", "expr", "reference" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    BOOLEAN=10
    NUMBER=11
    STRING=12
    IDENTIFIER=13
    COMMENT=14
    WS=15

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class TerraformContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(TerraformSubsetParser.EOF, 0)

        def block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TerraformSubsetParser.BlockContext)
            else:
                return self.getTypedRuleContext(TerraformSubsetParser.BlockContext,i)


        def COMMENT(self, i:int=None):
            if i is None:
                return self.getTokens(TerraformSubsetParser.COMMENT)
            else:
                return self.getToken(TerraformSubsetParser.COMMENT, i)

        def getRuleIndex(self):
            return TerraformSubsetParser.RULE_terraform

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTerraform" ):
                listener.enterTerraform(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTerraform" ):
                listener.exitTerraform(self)




    def terraform(self):

        localctx = TerraformSubsetParser.TerraformContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_terraform)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 26
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 16626) != 0):
                self.state = 24
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [1, 4, 5, 6, 7]:
                    self.state = 22
                    self.block()
                    pass
                elif token in [14]:
                    self.state = 23
                    self.match(TerraformSubsetParser.COMMENT)
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 28
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 29
            self.match(TerraformSubsetParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def provider(self):
            return self.getTypedRuleContext(TerraformSubsetParser.ProviderContext,0)


        def resource(self):
            return self.getTypedRuleContext(TerraformSubsetParser.ResourceContext,0)


        def variable(self):
            return self.getTypedRuleContext(TerraformSubsetParser.VariableContext,0)


        def output(self):
            return self.getTypedRuleContext(TerraformSubsetParser.OutputContext,0)


        def destroy(self):
            return self.getTypedRuleContext(TerraformSubsetParser.DestroyContext,0)


        def getRuleIndex(self):
            return TerraformSubsetParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)




    def block(self):

        localctx = TerraformSubsetParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_block)
        try:
            self.state = 36
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1]:
                self.enterOuterAlt(localctx, 1)
                self.state = 31
                self.provider()
                pass
            elif token in [4]:
                self.enterOuterAlt(localctx, 2)
                self.state = 32
                self.resource()
                pass
            elif token in [5]:
                self.enterOuterAlt(localctx, 3)
                self.state = 33
                self.variable()
                pass
            elif token in [6]:
                self.enterOuterAlt(localctx, 4)
                self.state = 34
                self.output()
                pass
            elif token in [7]:
                self.enterOuterAlt(localctx, 5)
                self.state = 35
                self.destroy()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ProviderContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(TerraformSubsetParser.STRING, 0)

        def body(self):
            return self.getTypedRuleContext(TerraformSubsetParser.BodyContext,0)


        def getRuleIndex(self):
            return TerraformSubsetParser.RULE_provider

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProvider" ):
                listener.enterProvider(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProvider" ):
                listener.exitProvider(self)




    def provider(self):

        localctx = TerraformSubsetParser.ProviderContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_provider)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 38
            self.match(TerraformSubsetParser.T__0)
            self.state = 39
            self.match(TerraformSubsetParser.STRING)
            self.state = 40
            self.match(TerraformSubsetParser.T__1)
            self.state = 41
            self.body()
            self.state = 42
            self.match(TerraformSubsetParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ResourceContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self, i:int=None):
            if i is None:
                return self.getTokens(TerraformSubsetParser.STRING)
            else:
                return self.getToken(TerraformSubsetParser.STRING, i)

        def body(self):
            return self.getTypedRuleContext(TerraformSubsetParser.BodyContext,0)


        def getRuleIndex(self):
            return TerraformSubsetParser.RULE_resource

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterResource" ):
                listener.enterResource(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitResource" ):
                listener.exitResource(self)




    def resource(self):

        localctx = TerraformSubsetParser.ResourceContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_resource)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 44
            self.match(TerraformSubsetParser.T__3)
            self.state = 45
            self.match(TerraformSubsetParser.STRING)
            self.state = 46
            self.match(TerraformSubsetParser.STRING)
            self.state = 47
            self.match(TerraformSubsetParser.T__1)
            self.state = 48
            self.body()
            self.state = 49
            self.match(TerraformSubsetParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariableContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(TerraformSubsetParser.STRING, 0)

        def body(self):
            return self.getTypedRuleContext(TerraformSubsetParser.BodyContext,0)


        def getRuleIndex(self):
            return TerraformSubsetParser.RULE_variable

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariable" ):
                listener.enterVariable(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariable" ):
                listener.exitVariable(self)




    def variable(self):

        localctx = TerraformSubsetParser.VariableContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_variable)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 51
            self.match(TerraformSubsetParser.T__4)
            self.state = 52
            self.match(TerraformSubsetParser.STRING)
            self.state = 53
            self.match(TerraformSubsetParser.T__1)
            self.state = 54
            self.body()
            self.state = 55
            self.match(TerraformSubsetParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OutputContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(TerraformSubsetParser.STRING, 0)

        def body(self):
            return self.getTypedRuleContext(TerraformSubsetParser.BodyContext,0)


        def getRuleIndex(self):
            return TerraformSubsetParser.RULE_output

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOutput" ):
                listener.enterOutput(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOutput" ):
                listener.exitOutput(self)




    def output(self):

        localctx = TerraformSubsetParser.OutputContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_output)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 57
            self.match(TerraformSubsetParser.T__5)
            self.state = 58
            self.match(TerraformSubsetParser.STRING)
            self.state = 59
            self.match(TerraformSubsetParser.T__1)
            self.state = 60
            self.body()
            self.state = 61
            self.match(TerraformSubsetParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DestroyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def body(self):
            return self.getTypedRuleContext(TerraformSubsetParser.BodyContext,0)


        def getRuleIndex(self):
            return TerraformSubsetParser.RULE_destroy

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDestroy" ):
                listener.enterDestroy(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDestroy" ):
                listener.exitDestroy(self)




    def destroy(self):

        localctx = TerraformSubsetParser.DestroyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_destroy)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 63
            self.match(TerraformSubsetParser.T__6)
            self.state = 64
            self.match(TerraformSubsetParser.T__1)
            self.state = 65
            self.body()
            self.state = 66
            self.match(TerraformSubsetParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def keyValue(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TerraformSubsetParser.KeyValueContext)
            else:
                return self.getTypedRuleContext(TerraformSubsetParser.KeyValueContext,i)


        def COMMENT(self, i:int=None):
            if i is None:
                return self.getTokens(TerraformSubsetParser.COMMENT)
            else:
                return self.getToken(TerraformSubsetParser.COMMENT, i)

        def getRuleIndex(self):
            return TerraformSubsetParser.RULE_body

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBody" ):
                listener.enterBody(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBody" ):
                listener.exitBody(self)




    def body(self):

        localctx = TerraformSubsetParser.BodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_body)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 72
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==13 or _la==14:
                self.state = 70
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [13]:
                    self.state = 68
                    self.keyValue()
                    pass
                elif token in [14]:
                    self.state = 69
                    self.match(TerraformSubsetParser.COMMENT)
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 74
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class KeyValueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(TerraformSubsetParser.IDENTIFIER, 0)

        def expr(self):
            return self.getTypedRuleContext(TerraformSubsetParser.ExprContext,0)


        def getRuleIndex(self):
            return TerraformSubsetParser.RULE_keyValue

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterKeyValue" ):
                listener.enterKeyValue(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitKeyValue" ):
                listener.exitKeyValue(self)




    def keyValue(self):

        localctx = TerraformSubsetParser.KeyValueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_keyValue)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 75
            self.match(TerraformSubsetParser.IDENTIFIER)
            self.state = 76
            self.match(TerraformSubsetParser.T__7)
            self.state = 77
            self.expr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(TerraformSubsetParser.STRING, 0)

        def NUMBER(self):
            return self.getToken(TerraformSubsetParser.NUMBER, 0)

        def BOOLEAN(self):
            return self.getToken(TerraformSubsetParser.BOOLEAN, 0)

        def reference(self):
            return self.getTypedRuleContext(TerraformSubsetParser.ReferenceContext,0)


        def getRuleIndex(self):
            return TerraformSubsetParser.RULE_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr" ):
                listener.enterExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr" ):
                listener.exitExpr(self)




    def expr(self):

        localctx = TerraformSubsetParser.ExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_expr)
        try:
            self.state = 83
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [12]:
                self.enterOuterAlt(localctx, 1)
                self.state = 79
                self.match(TerraformSubsetParser.STRING)
                pass
            elif token in [11]:
                self.enterOuterAlt(localctx, 2)
                self.state = 80
                self.match(TerraformSubsetParser.NUMBER)
                pass
            elif token in [10]:
                self.enterOuterAlt(localctx, 3)
                self.state = 81
                self.match(TerraformSubsetParser.BOOLEAN)
                pass
            elif token in [13]:
                self.enterOuterAlt(localctx, 4)
                self.state = 82
                self.reference()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReferenceContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(TerraformSubsetParser.IDENTIFIER)
            else:
                return self.getToken(TerraformSubsetParser.IDENTIFIER, i)

        def getRuleIndex(self):
            return TerraformSubsetParser.RULE_reference

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReference" ):
                listener.enterReference(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReference" ):
                listener.exitReference(self)




    def reference(self):

        localctx = TerraformSubsetParser.ReferenceContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_reference)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 85
            self.match(TerraformSubsetParser.IDENTIFIER)
            self.state = 90
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==9:
                self.state = 86
                self.match(TerraformSubsetParser.T__8)
                self.state = 87
                self.match(TerraformSubsetParser.IDENTIFIER)
                self.state = 92
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





